src/duckdb/snapshots/datafusion_table_providers__duckdb__attached_factory__tests__write_to_attached_db-2.snap
---
source: src/duckdb/attached_factory.rs
expression: formatted
---
+---+
| a |
+---+
| 1 |
| 2 |
| 3 |
| 4 |
| 5 |
+---+
